fdo#68313 fix combining diacritics problem with Graphite fonts

Change-Id: Ied29f864dc5fc21fc55aaa5ddd40b02b53a564f8